# cripto_bot

./: .env.example  .gitignore  README.md  app.py  cripto_bot.geany  data.py  keys.py  pyproject.toml  requirements.txt
core/: main.py
core/bot/: trading_bot.py
core/display/: terminal.py
core/exchange/: client.py  market.py  orders.py
core/repository/: db.py  injector.py  market.py  orders.py  wallet.py
core/services/: trade.py
core/strategy/: analyzer.py  lateral.py  reentry.py
core/utils/: config.py  trading.py
docs/adr/: 001-registro-decissoes-arquitetura.md  002-arquitetura-modular-em-python.md  003-integracao-com-binance-testnet-e-websocket.md  004-persistencia-local-com-sqlite.md  005-interface-baseada-em-terminal.md  006-analise-de-mercado-por-janela-de-precos.md  007-estrategia-de-trading.md  008-reentrada-apos-venda.md  009-persistencia-de-ordens-e-precos-de-mercado.md  010-gestao-de-carteira-e-preco-medio.md  011-commit-scopes.md  README.md
