[tool.poetry]
name = "cripto-bot"
version = "0.1.0"
description = "Bot for trade criptos"
authors = ["Ruan Souza"]
license = "CC-BY-NC-SA"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
python-binance = ">=1.0.32,<2.0.0"
python-dotenv = ">=1.2.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
